# ml-cat-project

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: index.md  modules.md
ml_cat_project/src/: data.py  debug.py  model.py  predict.py
modules/: index.html
search/: search_index.json
tests/: test_data.py  test_foo.py  test_predict.py
